--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,6 @@
-<button class="btn">Click Me</button>
+<button [ngStyle]="{'background-color': color}" 
+class="btn"
+(click)="onClick()"
+>
+ {{text}}
+</button>
