--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,6 +1,17 @@
-<div class="task">
+<div 
+    [ngClass]="{ reminder: task.reminder }" 
+    class="task" 
+    (dblclick)="onToggle(task)">
 
-    <h3>{{ task.text }}<fa-icon [ngStyle]="{ngcolor: 'red'}" [icon]="faTimes"></fa-icon></h3>
+    <h3>
+        {{ task.text }}
+        <fa-icon 
+            (click)="onDelete(task)" 
+            [ngStyle]="{ngcolor: 'red'}" 
+            [icon]="faTimes">
+        </fa-icon>
+    </h3>
+
     <p>{{ task.day }}</p>
 
 </div>
