routing and footer

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -7,7 +7,7 @@
         {{ task.text }}
         <fa-icon 
             (click)="onDelete(task)" 
-            [ngStyle]="{ngcolor: 'red'}" 
+            [ngStyle]="{color: 'red'}" 
             [icon]="faTimes">
         </fa-icon>
     </h3>
