--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -7,10 +7,9 @@
         <label for="day">Day</label>
         <input type="text" name="day"  [(ngModel)]="day" id="text" placeholder="Add Day & Time" />
     </div>
-    <div class class="form-control">
+    <div class class="form-control form-control-check">
         <label for="reminder">Set Reminder</label>
         <input type="checkbox" name="reminder" [(ngModel)]="reminder"  id="reminder" />
     </div>
-    <!-- {{text}} -->
     <input type="submit" value="Save Task" class="btn btn-block" />
 </form>
